<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.4</version>
        <relativePath/>
    </parent>

    <groupId>codes.monkey.cafe</groupId>
    <artifactId>cafe-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>


    <name>cafe-parent</name>
    <description>Cafe Parent</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <axon.version>4.4.7</axon.version>
        <mockk.version>1.9.3</mockk.version>
        <spring-cloud.version>2020.0.1</spring-cloud.version>
        <feign.version>10.11</feign.version>
        <rome.version>1.12.1</rome.version>
        <java.version>11</java.version>
        <kotlin.version>1.4.31</kotlin.version>
        <spring-kafka.version>2.7.2</spring-kafka.version>
        <avro.version>1.10.2</avro.version>
<!--        <confluent.version>3.3.1</confluent.version>-->
        <confluent.version>6.2.0</confluent.version>
        <kafka-schema-registry>http://127.0.0.1:8081</kafka-schema-registry>
    </properties>

    <modules>
        <module>cafe-spring-boot-starter</module>
        <module>cafe-test-support</module>
        <module>cafe-waiter</module>
        <module>cafe-kitchen</module>
        <module>cafe-cashier</module>
        <module>cafe-stockroom</module>
    </modules>


    <repositories>
        <repository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </pluginRepository>
    </pluginRepositories>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>codes.monkey.cafe</groupId>
                <artifactId>cafe-spring-boot-starter</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>codes.monkey.cafe</groupId>
                <artifactId>cafe-test-support</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>codes.monkey.cafe</groupId>
                <artifactId>cafe-waiter-client</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>codes.monkey.cafe</groupId>
                <artifactId>cafe-kitchen-client</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>codes.monkey.cafe</groupId>
                <artifactId>cafe-cashier-client</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>codes.monkey.cafe</groupId>
                <artifactId>cafe-stockroom-client</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.axonframework</groupId>
                <artifactId>axon-spring-boot-starter</artifactId>
                <version>${axon.version}</version>
            </dependency>
            <dependency>
                <groupId>org.axonframework</groupId>
                <artifactId>axon-test</artifactId>
                <version>${axon.version}</version>
            </dependency>
            <dependency>
                <groupId>io.mockk</groupId>
                <artifactId>mockk</artifactId>
                <version>${mockk.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.openfeign</groupId>
                <artifactId>feign-core</artifactId>
                <version>${feign.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rometools</groupId>
                <artifactId>rome</artifactId>
                <version>${rome.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.openfeign</groupId>
                <artifactId>feign-okhttp</artifactId>
                <version>${feign.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.openfeign</groupId>
                <artifactId>feign-jackson</artifactId>
                <version>${feign.version}</version>
            </dependency>
            <dependency>
                <groupId>com.willowtreeapps.assertk</groupId>
                <artifactId>assertk-jvm</artifactId>
                <version>0.23.1</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.kafka</groupId>
                <artifactId>spring-kafka</artifactId>
                <version>${spring-kafka.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.avro</groupId>
                <artifactId>avro</artifactId>
                <version>${avro.version}</version>
            </dependency>
            <dependency>
                <groupId>io.confluent</groupId>
                <artifactId>kafka-avro-serializer</artifactId>
                <version>${confluent.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>flatten.clean</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>build-info</goal>
                                <goal>repackage</goal>
                            </goals>
                            <configuration>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <!-- For configuring integration tests -->
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <!--version>${kotlin.version}</version-->
                    <!--executions>
                        <execution>
                            <id>compile</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>test-compile</id>
                            <phase>test-compile</phase>
                            <goals>
                                <goal>test-compile</goal>
                            </goals>
                        </execution>
                    </executions-->
                    <configuration>
                        <args>
                            <arg>-Xjsr305=strict --illegal-access=permit</arg>
                        </args>
                        <compilerPlugins>
                            <plugin>jpa</plugin>
                            <plugin>spring</plugin>
                        </compilerPlugins>
                        <jvmTarget>11</jvmTarget>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-allopen</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-noarg</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <includes>
                            <include>**/*Test</include>
                        </includes>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.junit.platform</groupId>
                            <artifactId>junit-platform-surefire-provider</artifactId>
                            <version>1.2.0</version>
                        </dependency>
                        <dependency>
                            <groupId>com.tngtech.archunit</groupId>
                            <artifactId>archunit-junit5-engine</artifactId>
                            <version>0.13.1</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>com.github.gantsign.maven</groupId>
                    <artifactId>ktlint-maven-plugin</artifactId>
                    <version>1.2.3</version>
                    <executions>
                        <execution>
                            <id>format-and-check</id>
                            <goals>
                                <goal>format</goal>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.8</version>
                    <executions>
                        <execution>
                            <!-- This can be run separately with mvn antrun:run@detekt -->
                            <id>detekt</id>
                            <phase>validate</phase>
                            <configuration>
                                <target name="detekt">
                                    <java taskname="detekt" dir="${basedir}"
                                          fork="true"
                                          failonerror="true"
                                          classname="io.gitlab.arturbosch.detekt.cli.Main"
                                          classpathref="maven.plugin.classpath">
                                        <arg value="--input"/>
                                        <arg value="${basedir}/src/main/kotlin"/>
                                        <arg value="--report"/>
                                        <arg value="xml:${basedir}/reports/detekt.xml"/>n
                                        <arg value="--baseline"/>
                                        <arg value="${basedir}/reports/baseline.xml"/>
                                        <arg value="--build-upon-default-config"/>
                                        <arg value="--config"/>
                                        <arg value="${project.basedir}/../detekt-config.yml"/>
                                    </java>
                                </target>
                            </configuration>
                            <goals>
                                <goal>run</goal>
                            </goals>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>io.gitlab.arturbosch.detekt</groupId>
                            <artifactId>detekt-cli</artifactId>
                            <version>1.2.0</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>io.confluent</groupId>
                    <artifactId>kafka-schema-registry-maven-plugin</artifactId>
                    <version>${confluent.version}</version>
                    <configuration>
                        <schemaRegistryUrls>
                            <param>${kafka-schema-registry}</param>
                        </schemaRegistryUrls>
                    </configuration>
                    <goals>
                        <goal>register</goal>
                    </goals>
                </plugin>
                <plugin>
                    <groupId>org.apache.avro</groupId>
                    <artifactId>avro-maven-plugin</artifactId>
                    <version>1.10.2</version>
                    <executions>
                        <execution>
                            <phase>generate-sources</phase>
                            <goals>
                                <goal>schema</goal>
                                <!-- <goal>protocol</goal>-->
                                <!-- <goal>idl-protocol</goal>-->
                            </goals>
                            <configuration>
                                <sourceDirectory>${project.basedir}/src/main/resources/avro</sourceDirectory>
<!--                                <stringType>String</stringType>-->
                                <createSetters>false</createSetters>
                                <enableDecimalLogicalType>true</enableDecimalLogicalType>
                                <fieldVisibility>private</fieldVisibility>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>3.0.0</version>
                    <executions>
                        <execution>
                            <id>add-source</id>
                            <phase>generate-sources</phase>
                            <goals>
                                <goal>add-source</goal>
                            </goals>
                            <configuration>
                                <sources>
                                    <source>target/generated-sources/avro</source>
                                </sources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
